# icp-canister-signature-verifier

./: .gitignore  .prettierignore  .prettierrc  README.md  dfx.json  index.html  package-lock.json  package.json  vite.config.js
src/frontend/: app.js  canister.js  main.js  style.css
src/rs/: Cargo.toml
src/rs/src/: lib.rs
