[package]
name = "icp_canister_signature_verifier"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.6"
web-sys = { version = "0.3", features = ["console"] }
ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", package = "ic-crypto-utils-threshold-sig-der", version = "0.8.0" }
ic-crypto-standalone-sig-verifier = { git = "https://github.com/dfinity/ic.git", package = "ic-crypto-standalone-sig-verifier", version = "0.8.0" }
ic-types = { git = "https://github.com/dfinity/ic.git", package = "ic-types", version = "0.8.0" }
